[package]
name = "paybeam-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "22.0.1" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
